# xlcs

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: black.yml  ci.yml
examples/: custommap.py  ex0-ftle.ipynb  ex1-lavd.ipynb  lavd.ipynb
tests/: test_lcs.py
xlcs/: _version.py  contours.py  grid_calc.py  kernels.py  lagrangian_tools.py  particle.py
